Including memory to the llm

--- a/1_BasicChatBot/basic_chat_bot.ipynb
+++ b/1_BasicChatBot/basic_chat_bot.ipynb
@@ -461,6 +461,267 @@
     "for res in res['messages']:\n",
     "    res.pretty_print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "510b3a19",
+   "metadata": {},
+   "source": [
+    "Memory including to the LLM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e7432aad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "Hi this is MBYR\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Hello MBYR, it's nice to meet you. Is there something I can help you with or would you like to chat?\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = graph.invoke({\"messages\":\"Hi this is MBYR\"})\n",
+    "\n",
+    "for res in res['messages']:\n",
+    "    res.pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "3cc613b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "What is my Name?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "I don't have any information about your name. This conversation just started, and I don't have any context or prior knowledge about you. If you'd like to share your name, I'd be happy to chat with you!\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = graph.invoke({\"messages\":\"What is my Name?\"})\n",
+    "\n",
+    "for res in res['messages']:\n",
+    "    res.pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "25fbb51c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.checkpoint.memory import MemorySaver\n",
+    "\n",
+    "memory = MemorySaver() # in memory checkpoint memory saver dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "4daa968a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Annotated\n",
+    "\n",
+    "from typing_extensions import TypedDict\n",
+    "from langgraph.graph import START, END, StateGraph  \n",
+    "from langgraph.graph.message import add_messages   #reducers\n",
+    "\n",
+    "class State(TypedDict):\n",
+    "    messages:Annotated[list,add_messages] # updates the messhaes rather than overwriding them.\n",
+    "    \n",
+    "graph = StateGraph(State)\n",
+    "def tool_calling_llm(state:State):\n",
+    "    return {\"messages\":[llm_with_tools.invoke(state['messages'])]}\n",
+    "\n",
+    "graph.add_node(\"tool_calling_llm\", tool_calling_llm)\n",
+    "graph.add_node(\"tools\", ToolNode(tools))\n",
+    "\n",
+    "graph.add_edge(START, \"tool_calling_llm\")\n",
+    "graph.add_conditional_edges(\"tool_calling_llm\",tools_condition)\n",
+    "graph.add_edge(\"tools\", \"tool_calling_llm\")\n",
+    "#graph.compile()\n",
+    "\n",
+    "graph=graph.compile(checkpointer=memory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "9f4ef488",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config={\"configurable\":{\"thread_id\":\"1\"}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "863e0788",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "My name is MBYR\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Hello MBYR, it's nice to meet you. Is there something I can help you with or would you like to chat?\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "What is my Name?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Your name is MBYR.\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "My name is MBYR\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  tavily_search (6hhba7r9a)\n",
+      " Call ID: 6hhba7r9a\n",
+      "  Args:\n",
+      "    query: MBYR\n",
+      "    search_depth: basic\n",
+      "    topic: general\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: tavily_search\n",
+      "\n",
+      "{\"query\": \"MBYR\", \"follow_up_questions\": null, \"answer\": null, \"images\": [], \"results\": [{\"url\": \"https://www.instagram.com/the_quiet_bard/?hl=en\", \"title\": \"M.B.Y.R. (@the_quiet_bard) • Instagram photos and videos\", \"content\": \"Writer. \\\"So here she is, you read her now; She crawled back to me loyally. Her life I freely will allow; She is my written POETRY.\\\"\", \"score\": 0.9854, \"raw_content\": null}, {\"url\": \"https://github.com/mbyr\", \"title\": \"Michal mbyr\", \"content\": \"mbyrhas 5 repositories available. Follow their code on GitHub.\", \"score\": 0.98179, \"raw_content\": null}, {\"url\": \"https://www.youtube.com/channel/UCz1VHbzuaDvTmOhHQN68iTQ\", \"title\": \"MBYR\", \"content\": \"Just two bros playing Minecraft! MBYR means Minecraft bros yakub Reuben! ...more. Just two bros playing Minecraft! MBYR means Minecraft bros yakub Reuben!\", \"score\": 0.97637, \"raw_content\": null}, {\"url\": \"https://www.pinterest.com/mbyr9385/\", \"title\": \"Mbyr (mbyr9385) - Profile\", \"content\": \"Mbyr; تعليم التصرير · 2 Pins · 4y ; Dream backyard · 1 Pin · 4y ; Aesthetic iphone wallpaper · 1 Pin · 4y ; تصميم لوحه · 23 Pins · 3y.\", \"score\": 0.9731, \"raw_content\": null}, {\"url\": \"https://www.instagram.com/ambyrbambyr/?hl=en\", \"title\": \"Ambyr Bambyr Mishelle (@ambyrbambyr)\", \"content\": \"226 posts · 2,465 followers · 1,708 following. ambyrbambyr.Ambyr Bambyr Mishelle. Personal blog. Welcome to the Bambyr zone EMBRACE THE CHAOS . . STUNT REEL ⤵️\", \"score\": 0.96743, \"raw_content\": null}], \"response_time\": 2.52, \"request_id\": \"7aef1353-ee92-47fa-bcb0-9d94118f985e\"}\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Your name is MBYR. It seems that there are various individuals and entities associated with this name, including a writer, a GitHub user, a YouTube channel, and social media profiles. If you could provide more context or information about which MBYR you are referring to, I may be able to provide more specific and relevant results.\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = graph.invoke({\"messages\":\"My name is MBYR\"}, config=config)\n",
+    "\n",
+    "for res in res['messages']:\n",
+    "    res.pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d45b2596",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_temp = {\"configurable\":{\"thread_id\":\"12345\"}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "ef823c9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "What is my Name?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "I don't have any information about your name. This conversation just started, and I don't have the ability to access any personal information about you. If you'd like to share your name, I'd be happy to chat with you!\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "What is my Name?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "I don't have enough information to determine your name. If you could provide more context or details, I'd be happy to try and help. Alternatively, if you're looking for information on how to find or retrieve your name, I can try to assist you with that as well.\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = graph.invoke({\"messages\":\"What is my Name?\"}, config=config_temp)\n",
+    "\n",
+    "for res in res['messages']:\n",
+    "    res.pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "40e8a431",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "My name is MBYR\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Hello MBYR, it's nice to meet you. Is there something I can help you with or would you like to chat?\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "What is my Name?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Your name is MBYR.\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "My name is MBYR\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  tavily_search (6hhba7r9a)\n",
+      " Call ID: 6hhba7r9a\n",
+      "  Args:\n",
+      "    query: MBYR\n",
+      "    search_depth: basic\n",
+      "    topic: general\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: tavily_search\n",
+      "\n",
+      "{\"query\": \"MBYR\", \"follow_up_questions\": null, \"answer\": null, \"images\": [], \"results\": [{\"url\": \"https://www.instagram.com/the_quiet_bard/?hl=en\", \"title\": \"M.B.Y.R. (@the_quiet_bard) • Instagram photos and videos\", \"content\": \"Writer. \\\"So here she is, you read her now; She crawled back to me loyally. Her life I freely will allow; She is my written POETRY.\\\"\", \"score\": 0.9854, \"raw_content\": null}, {\"url\": \"https://github.com/mbyr\", \"title\": \"Michal mbyr\", \"content\": \"mbyrhas 5 repositories available. Follow their code on GitHub.\", \"score\": 0.98179, \"raw_content\": null}, {\"url\": \"https://www.youtube.com/channel/UCz1VHbzuaDvTmOhHQN68iTQ\", \"title\": \"MBYR\", \"content\": \"Just two bros playing Minecraft! MBYR means Minecraft bros yakub Reuben! ...more. Just two bros playing Minecraft! MBYR means Minecraft bros yakub Reuben!\", \"score\": 0.97637, \"raw_content\": null}, {\"url\": \"https://www.pinterest.com/mbyr9385/\", \"title\": \"Mbyr (mbyr9385) - Profile\", \"content\": \"Mbyr; تعليم التصرير · 2 Pins · 4y ; Dream backyard · 1 Pin · 4y ; Aesthetic iphone wallpaper · 1 Pin · 4y ; تصميم لوحه · 23 Pins · 3y.\", \"score\": 0.9731, \"raw_content\": null}, {\"url\": \"https://www.instagram.com/ambyrbambyr/?hl=en\", \"title\": \"Ambyr Bambyr Mishelle (@ambyrbambyr)\", \"content\": \"226 posts · 2,465 followers · 1,708 following. ambyrbambyr.Ambyr Bambyr Mishelle. Personal blog. Welcome to the Bambyr zone EMBRACE THE CHAOS . . STUNT REEL ⤵️\", \"score\": 0.96743, \"raw_content\": null}], \"response_time\": 2.52, \"request_id\": \"7aef1353-ee92-47fa-bcb0-9d94118f985e\"}\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Your name is MBYR. It seems that there are various individuals and entities associated with this name, including a writer, a GitHub user, a YouTube channel, and social media profiles. If you could provide more context or information about which MBYR you are referring to, I may be able to provide more specific and relevant results.\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "What is my Name?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Your name is MBYR.\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = graph.invoke({\"messages\":\"What is my Name?\"}, config=config)\n",
+    "\n",
+    "for res in res['messages']:\n",
+    "    res.pretty_print()"
+   ]
   }
  ],
  "metadata": {
